# quark-autosave-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.en.md  README.md  README_EN.md  bot.py  compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml  docker.yml
src/nonebot_plugin_quark_autosave/: __init__.py  client.py  config.py  exception.py  model.py
tests/: fake.py  test_matcher.py
