[project]
name = "nonebot-plugin-quark-autosave"
version = "0.1.9"
description = "配合 quark-auto-save(https://github.com/Cp0204/quark-auto-save) 使用, 支持添加，删除，列出，运行任务"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "fllesser", email = "fllessive@gmail.com" }]
urls = { Repository = "https://github.com/fllesser/nonebot-plugin-quark-autosave" }
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "nonebot-plugin-alconna>=0.59.4,<1.0.0", # 跨平台命令解析拓展
  "nonebot2>=2.4.3,<3.0.0",
]

[dependency-groups]
dev = [
  "nonebot2[fastapi, httpx]>=2.4.3,<3.0.0",
  "nonebot-adapter-onebot>=2.4.6,<3.0.0",
  "ruff>=0.14.10,<1.0.0",
  "poethepoet>=0.38.0",
  { include-group = "test" },
]
pydantic-v1 = ["pydantic>=1.10.0,<2.0.0"]
pydantic-v2 = ["pydantic>2.0.0,<3.0.0"]
telebot = ["nonebot-adapter-telegram>=0.1.0b20", "nonebot2[httpx]"]
test = [
  "pytest-asyncio>=1.3.0,<1.4.0",
  "pytest-xdist>=3.8.0,<4.0.0",
  "pytest>=9.0.2,<10.0.0",
  "nonebug>=0.3.7,<1.0.0",
  "pytest-cov>=7.0.0",
  "respx>=0.22.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
conflicts = [
  [
    { group = "pydantic-v1" },
    { group = "pydantic-v2" },
    { group = "telebot" },
  ],
]

[tool.uv.sources]
nonebug = { git = "https://github.com/nonebot/nonebug" }

[tool.bumpversion]
tag = true
commit = true
current_version = "0.1.9"
message = "release: bump vesion from {current_version} to {new_version}"


[[tool.bumpversion.files]]
filename = "uv.lock"
search = "name = \"nonebot-plugin-quark-autosave\"\nversion = \"{current_version}\""
replace = "name = \"nonebot-plugin-quark-autosave\"\nversion = \"{new_version}\""

[tool.coverage.report]
show_missing = true # 相当于 --cov-report=term-missing:cite[1]
omit = ["tests/*", "bot.py"]
exclude_lines = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
  "class Addition",
]

[tool.nonebot]
adapters = [{ name = "Telegram", module_name = "nonebot.adapters.telegram" }]
plugins = ["nonebot_plugin_quark_autosave"]

[tool.poe.tasks]
test = "pytest --cov=src --cov-report xml --junitxml=./junit.xml -n auto"
bump = "bump-my-version bump"
show-bump = "bump-my-version show-bump"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
executionEnvironments = [
  { root = "./tests", extraPaths = [
    "./src",
  ] },
  { root = "./src" },
]
typeCheckingMode = "standard"
disableBytesTypePromotions = true

[tool.pytest]
addopts = [
  "-v",                    # 详细输出
  "-s",                    # 显示打印信息
  "-ra",                   # 显示所有测试结果摘要
  "--tb=short",            # 简短的错误回溯
  "--strict-markers",      # 严格标记模式
  "--import-mode=prepend", # 导入模式
]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"


[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "I",     # isort
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "TID",   # flake8-tidy-imports
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "W191",   # indentation contains tabs
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "TID252", # relative import
]

[tool.ruff.lint.isort]
length-sort = true
known-first-party = ["tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
